@@ -705,7 +705,7 @@ function str_smith_waterman%(s1: string, s2: string, params: sw_params%) : sw_su
 ## .. zeek:see:: split_string split_string1 split_string_all split_string_n
 function str_split%(s: string, idx: index_vec%): string_vec
 	%{
-	vector<Val*>* idx_v = idx->AsVector();
+	auto idx_v = idx->AsVector();
 	BroString::IdxVec indices(idx_v->size());
 	unsigned int i;
 
